List projects worked on eBay

--- a/curriculum.tex
+++ b/curriculum.tex
@@ -27,8 +27,8 @@
 \begin{cvsection}{Education}
 
     \makesectionitemheader
-        {Computer Science Bachelor eq.}                             {FaMAF, UNC}
-        {Analista en Computación}                           {Córdoba, Argentina}
+        {Computer Science Bachelor eq.}       {FaMAF, UNC}
+        {}                                    {Córdoba, Argentina}
 
         \begin{sectionitemlist}
 
@@ -62,48 +62,60 @@
 \begin{cvsection}{Experience}
 
     %---------------------------------------------------------------------------
-    %   SECTION ITEM: Distillery
+    %   SECTION ITEM: eBay - Distillery
     %---------------------------------------------------------------------------
 
     \makesectionitemheader
-        {Distillery}                                               {March 2023}
-        {Senior iOS Developer}                                     {Remote - Contractor}
+        {eBay - Distillery}         {March 2023 - Present}
+        {Senior iOS Engineer}       {Remote - Contractor}
 
         \begin{sectionitemlist}
 
         % eBay
         \item{
-            Worked for the \textit{eBay} Payments Team, .
+            Worked for the eBay \textbf{Payments} Team.
         }
 
         \item{
-            Worked on \textbf{iOS with Swift and Objective C} with \textbf{MVVM+Coordinator} pattern using \textbf{SwiftUI} and \textbf{Combine}.
+            Worked on \textbf{iOS with Swift} using the \textbf{MVVM-C} pattern
+            with \textbf{Combine} using both \textbf{UIKit} and \textbf{SwiftUI}.
+        }
+
+        \item{
+            Participated in the design and development of features such as:
+        } {
+            \begin{colsectionitemlist}{2}
+            \item{Post-Purchase Recommendations}
+            \item{Bank Information Collection Flow}
+            \item{Debit Card Payouts}
+            \item{Migration from Objective-C to Swift}
+            \end{colsectionitemlist}
         }
 
         \end{sectionitemlist}
 
     %---------------------------------------------------------------------------
-    %   SECTION ITEM: Venmo
+    %   SECTION ITEM: Venmo - Taller
     %---------------------------------------------------------------------------
 
     \makesectionitemheader
-        {Venmo (PayPal) - Taller Technologies}              {Sept. 2020 - Jan. 2023}
-        {Senior Software Engineer}                                 {Remote - Contractor}
+        {Venmo (PayPal) - Taller Technologies}      {Sept. 2020 - Jan. 2023}
+        {Senior Software Engineer}                  {Remote - Contractor}
 
         \begin{sectionitemlist}
 
         \item{
-            Worked for the \textit{Venmo - PayPal} (digital wallet) project.
+            Worked on the \textit{Venmo - PayPal} (digital wallet) iOS app.
         }
 
         \item{
-            Worked on \textbf{iOS with Swift} using \textbf{MVVM+Coordinator} pattern,
-            building programmatic UI with \textbf{UIKit} and \textbf{RxSwift}.
+            Worked on \textbf{iOS with Swift} using the \textbf{MVVM-C} pattern with \textbf{RxSwift},
+            building programmatic UI with \textbf{UIKit}.
         }
 
         \item{
             Worked on back-end with \textbf{Python} using the \textbf{Django} framework
-            and tools like \textbf{Kubernetes}, \textbf{DataDog}, \textbf{ElasticSearch}.
+            and other tools such as \textbf{Kubernetes}, \textbf{DataDog} and \textbf{ElasticSearch}.
         }
 
         \item{
@@ -121,7 +133,7 @@
             \begin{colsectionitemlist}{2}
             \item{Navigation Redesign}
             \item{Photo Gallery}
-            \item{Onboarding/Update}
+            \item{Profile Onboarding \& Update}
             \end{colsectionitemlist}
         }
 
