Update current position to Bitso

--- a/curriculum.tex
+++ b/curriculum.tex
@@ -62,11 +62,29 @@
 \begin{cvsection}{Experience}
 
     %---------------------------------------------------------------------------
+    %   SECTION ITEM: Bitso
+    %---------------------------------------------------------------------------
+
+    \makesectionitemheader
+        {Bitso}                     {March 2023 - May 2024}
+        {Senior iOS Engineer}       {Remote - Contractor}
+
+        \begin{sectionitemlist}
+
+        % Bitso
+        \item{
+            Worked for the Bitso \textbf{Earnings} Team.
+        }
+
+        \end{sectionitemlist}
+
+    %---------------------------------------------------------------------------
+    %---------------------------------------------------------------------------
     %   SECTION ITEM: eBay - Distillery
     %---------------------------------------------------------------------------
 
     \makesectionitemheader
-        {eBay - Distillery}         {March 2023 - Present}
+        {eBay - Distillery}         {March 2023 - May 2024}
         {Senior iOS Engineer}       {Remote - Contractor}
 
         \begin{sectionitemlist}
