--- a/curriculum.tex
+++ b/curriculum.tex
@@ -15,48 +15,44 @@
 
 \makeheader
     {Igor Andruskiewitsch}  {\email{i.andruskiewitsch23@gmail.com}}
-    {Software Developer}    {\github{rusito-23}}
-    {Córdoba, Argentina}    {\linkedin{igor-andruskiewitsch}}
+    {Senior iOS Engineer}    {\github{rusito-23}}
+    {C\'ordoba, Argentina}    {\linkedin{igor-andruskiewitsch}}
 
 \end{cvheader}
 
 %-------------------------------------------------------------------------------
-%   SECTION: EDUCATION
+%   PROFESSIONAL SUMMARY
+%-------------------------------------------------------------------------------
+
+\begin{cvsection}{Professional Summary}
+
+    \begin{summary}
+        Experienced iOS Engineer with over 6 years of expertise in \textbf{Swift with UIKit and SwiftUI}. Proven track record in developing scalable mobile solutions for \textbf{FinTech and E-commerce}. Passionate about delivering high-quality software and improving development processes.
+    \end{summary}
+
+\end{cvsection}
+
+%-------------------------------------------------------------------------------
+
+%-------------------------------------------------------------------------------
+%   EDUCATION
 %-------------------------------------------------------------------------------
 
 \begin{cvsection}{Education}
 
     \makesectionitemheader
         {Computer Science Bachelor eq.}       {FaMAF, UNC}
-        {}                                    {Córdoba, Argentina}
-
-        \begin{sectionitemlist}
-
-        \item {
-            \textbf{GPA}: 8.4 (10 scale)
-        }
-        \item {
-            \textbf{Graduation Date}: July 2021
-        }
-        \item {
-            \textbf{Taken Subjects Highlights}:
-        }
-        {
-            \begin{colsectionitemlist}{3}
-                \item{Data Structures \& Algorithms}
-                \item{Probability and Statistics}
-                \item{Numerical Analysis}
-                \item{Software Engineering}
-                \item{Computer Organization \& Architecture}
-            \end{colsectionitemlist}
-        }
-
-        \end{sectionitemlist}
+        {Analista en Computación}             {C\'ordoba, Argentina}
+    \begin{sectionitemlist}
+        \item {\textbf{GPA}: 8.4 (10 scale)}
+        \item {\textbf{Graduation Date}: July 2021}
+        \item {\textbf{Relevant Coursework}: Data Structures \& Algorithms, Software Engineering, Numerical Analysis, Neural Networks and Computer Organization and Architecture}
+    \end{sectionitemlist}
 
 \end{cvsection}
 
 %-------------------------------------------------------------------------------
-%   SECTION: EXPERIENCE
+%   EXPERIENCE
 %-------------------------------------------------------------------------------
 
 \begin{cvsection}{Experience}
@@ -74,6 +70,19 @@
         % Bitso
         \item{
             Worked for the Bitso \textbf{Earnings} Team.
+        }
+        \item{
+            Worked on \textbf{iOS with Swift} using both \textbf{UIKit} and \textbf{SwiftUI}, focusing on \textbf{Back-end Driven UI}.
+        }
+        \item{
+            Worked on back-end using \textbf{Java} with \textbf{Spring}.
+        }
+        \item{
+            Participated in the design and development of features such as:
+            \begin{colsectionitemlist}{2}
+            \item{Earnings Hub Experience Improvements}
+            \item{Modularization of features}
+            \end{colsectionitemlist}
         }
 
         \end{sectionitemlist}
@@ -308,35 +317,15 @@
 \end{cvsection}
 
 %-------------------------------------------------------------------------------
-%   EXTRACURRICULAR ACTIVITY
+%   EXTRACURRICULAR ACTIVITIES
 %-------------------------------------------------------------------------------
 
-\begin{cvsection}{Extracurricular activity}
-
-    \makesectionitemheader
-        {PyData}                                            {2018 \& 2019 editions}
-        {Volunteer}                                         {Córdoba, Argentina} \\
-        \vspace{0.5ex}
-        {Helped the committee on different organizational tasks.}
-
-    \makesectionitemheader
-        {Conference on Computer Science (JCC)}              {Oct. 25/27, 2017}
-        {Scholar}                                           {Rosario, Argentina} \\
-        \vspace{0.5ex}
-        {
-            Received a scholarship to participate in the Conference on
-            Computer Science at the National University of Rosario, Rosario, Argentina.
-        }
-
-    \makesectionitemheader
-        {Argentinian Programming Contest (TAP)}             {2018 \& 2019 editions}
-        {Participant}                                       {Córdoba, Argentina} \\
-        \vspace{0.5ex}
-        {
-            Based on resolving a series of mathematical and algorithmic
-            problems using programming skills.
-        }
-
+\begin{cvsection}{Extracurricular Activities}
+    \begin{sectionitemlist}
+        \item {Volunteered to help the committee in the \textbf{PyData} 2018 \& 2019 editions}
+        \item {Received a scholarship to participate in the 2017 \textbf{Conference on Computer Science} at the National University of Rosario, Argentina}
+        \item {Participated in the Argentinian Programming Contest, \textbf{TAP}, 2018 \& 2019 editions}
+    \end{sectionitemlist}
 \end{cvsection}
 
 %-------------------------------------------------------------------------------
