Fix multiple errors in the Bitso and eBay/Venmo sections

--- a/curriculum.tex
+++ b/curriculum.tex
@@ -46,7 +46,7 @@
     \begin{sectionitemlist}
         \item {\textbf{GPA}: 8.4 (10 scale)}
         \item {\textbf{Graduation Date}: July 2021}
-        \item {\textbf{Relevant Coursework}: Data Structures \& Algorithms, Software Engineering, Numerical Analysis, Neural Networks and Computer Organization and Architecture}
+        \item {\textbf{Relevant Coursework}: Data Structures \& Algorithms, Software Engineering, Numerical Analysis, Neural Networks.}
     \end{sectionitemlist}
 
 \end{cvsection}
@@ -62,29 +62,22 @@
     %---------------------------------------------------------------------------
 
     \makesectionitemheader
-        {Bitso}                     {March 2023 - May 2024}
-        {Senior iOS Engineer}       {Remote - Contractor}
+        {Bitso}                     {May 2024 - present}
+        {Senior iOS Engineer}       {Remote - Full Time Employee}
 
         \begin{sectionitemlist}
-
-        % Bitso
         \item{
-            Worked for the Bitso \textbf{Earnings} Team.
-        }
+                \textbf{Technologies:} iOS with Swift, React Native, UIKit, SwiftUI, Java Spring, PostgreSQL
+            }
         \item{
-            Worked on \textbf{iOS with Swift} using both \textbf{UIKit} and \textbf{SwiftUI}, focusing on \textbf{Back-end Driven UI}.
-        }
+                Implemented multiple experiments that contributed to a high increase in the \textit{Earnings feature activation}.
+            }
         \item{
-            Worked on back-end using \textbf{Java} with \textbf{Spring}.
-        }
+                Developed various UX improvements, including the development of a \textit{historical earnings analysis mobile tool}.
+            }
         \item{
-            Participated in the design and development of features such as:
-            \begin{colsectionitemlist}{2}
-            \item{Earnings Hub Experience Improvements}
-            \item{Modularization of features}
-            \end{colsectionitemlist}
-        }
-
+                Contributed to the migration of several \textit{Design System components} to SwiftUI and React Native.
+            }
         \end{sectionitemlist}
 
     %---------------------------------------------------------------------------
@@ -97,28 +90,18 @@
         {Senior iOS Engineer}       {Remote - Contractor}
 
         \begin{sectionitemlist}
-
-        % eBay
         \item{
-            Worked for the eBay \textbf{Payments} Team.
+            \textbf{Technologies:} iOS with Swift, MVVM-C pattern, UIKit, SwiftUI, Combine
         }
-
         \item{
-            Worked on \textbf{iOS with Swift} using the \textbf{MVVM-C} pattern
-            with \textbf{Combine} using both \textbf{UIKit} and \textbf{SwiftUI}.
+            Integrated a \textit{Post-Purchase Recommendation System} to increase customer engagement, enhancing revenue.
         }
-
         \item{
-            Participated in the design and development of features such as:
-        } {
-            \begin{colsectionitemlist}{2}
-            \item{Post-Purchase Recommendations}
-            \item{Bank Information Collection Flow}
-            \item{Debit Card Payouts}
-            \item{Migration from Objective-C to Swift}
-            \end{colsectionitemlist}
+            Worked on multiple flows to enhance the seller payout experience, including \textit{Debit Card Payouts} and \textit{Bank Information Collection}.
         }
-
+        \item{
+            Successfully migrated several Objective-C components, increasing the Swift component coverage from 80\% to 100\%.
+        }
         \end{sectionitemlist}
 
     %---------------------------------------------------------------------------
@@ -130,61 +113,29 @@
         {Senior Software Engineer}                  {Remote - Contractor}
 
         \begin{sectionitemlist}
-
         \item{
-            Worked on the \textit{Venmo - PayPal} (digital wallet) iOS app.
+            \textbf{Technologies}: iOS with Swift, MVVM-C pattern, RxSwift, UIKit,
+            Python, Django, Kubernetes, DataDog, ElasticSearch
         }
-
         \item{
-            Worked on \textbf{iOS with Swift} using the \textbf{MVVM-C} pattern with \textbf{RxSwift},
-            building programmatic UI with \textbf{UIKit}.
+            Improved the security for business profiles by developing an \textit{ad-hoc Biometric and PIN Authentication system}.
         }
-
         \item{
-            Worked on back-end with \textbf{Python} using the \textbf{Django} framework
-            and other tools such as \textbf{Kubernetes}, \textbf{DataDog} and \textbf{ElasticSearch}.
+            Developed several features to improve the \textit{Discovery and Promotion} of business profiles,
+            such as adding support for photo galleries and showcasing business profiles in the feed.
         }
-
-        \item{
-            Led the design and development of features for business profiles on iOS such as:
-        }{
-            \begin{colsectionitemlist}{2}
-            \item{Business Profile Local Biometric and Passcode Authentication}
-            \item{Business Profile Discovery and Promotion (showcasing business profiles in the feed)}
-            \end{colsectionitemlist}
-        }
-
-        \item{
-            Worked on development and improvement of business profile features such as:
-        }{
-            \begin{colsectionitemlist}{2}
-            \item{Navigation Redesign}
-            \item{Photo Gallery}
-            \item{Profile Onboarding \& Update}
-            \end{colsectionitemlist}
-        }
-
         \item{
             Participated in the effort to ensure the app was \textit{a11y} compliant
             by conducting bug searches, analysis and resolution.
         }
-
         \item{
-            Participated in the design and development of
-            different charity profile features both on iOS and back-end.
-        }{
-            \begin{colsectionitemlist}{3}
-            \item{Charity Donations}
-            \item{Charity Discovery}
-            \item{Charity Search}
-            \end{colsectionitemlist}
+            Introduced charity profiles to the app by adding support
+            for \textit{Search and Discovery} and \textit{Donations}.
         }
-
         \item{
             Automated fix to replace wrongly set images to 200k users with
             picture comparison using structural similarity.
         }
-
         \end{sectionitemlist}
 
     %---------------------------------------------------------------------------
