Finish polishing all the experience sections

--- a/curriculum.tex
+++ b/curriculum.tex
@@ -63,21 +63,24 @@
 
     \makesectionitemheader
         {Bitso}                     {May 2024 - present}
-        {Senior iOS Engineer}       {Remote - Full Time Employee}
+        {Senior Software Engineer}  {Remote - Full Time Employee}
 
         \begin{sectionitemlist}
         \item{
-                \textbf{Technologies:} iOS with Swift, React Native, UIKit, SwiftUI, Java Spring, PostgreSQL
+                \textbf{Technologies:} Swift (iOS), React Native, UIKit, SwiftUI, Java Spring, PostgreSQL
             }
         \item{
-                Implemented multiple experiments that contributed to a high increase in the \textit{Earnings feature activation}.
-            }
+            Implemented multiple experiments that contributed to a
+            high increase in the \textbf{Earnings feature activation}.
+        }
         \item{
-                Developed various UX improvements, including the development of a \textit{historical earnings analysis mobile tool}.
-            }
+            Delivered several UX enhancements, including a
+            \textbf{historical earnings analysis tool} for mobile.
+        }
         \item{
-                Contributed to the migration of several \textit{Design System components} to SwiftUI and React Native.
-            }
+            Contributed to the migration of several
+            \textit{Design System components} to SwiftUI and React Native.
+        }
         \end{sectionitemlist}
 
     %---------------------------------------------------------------------------
@@ -91,13 +94,14 @@
 
         \begin{sectionitemlist}
         \item{
-            \textbf{Technologies:} iOS with Swift, MVVM-C pattern, UIKit, SwiftUI, Combine
+            \textbf{Technologies:} Swift (iOS), MVVM-C pattern, UIKit, SwiftUI, Combine
         }
         \item{
-            Integrated a \textit{Post-Purchase Recommendation System} to increase customer engagement, enhancing revenue.
+            Integrated a \textbf{Post-Purchase Recommendation System} to increase customer engagement, enhancing revenue.
         }
         \item{
-            Worked on multiple flows to enhance the seller payout experience, including \textit{Debit Card Payouts} and \textit{Bank Information Collection}.
+            Worked on multiple flows to enhance the seller payout experience,
+            including \textbf{Debit Card Payouts} and \textbf{Bank Information Collection}.
         }
         \item{
             Successfully migrated several Objective-C components, increasing the Swift component coverage from 80\% to 100\%.
@@ -114,22 +118,24 @@
 
         \begin{sectionitemlist}
         \item{
-            \textbf{Technologies}: iOS with Swift, MVVM-C pattern, RxSwift, UIKit,
+            \textbf{Technologies:} Swift (iOS), MVVM-C pattern, RxSwift, UIKit,
             Python, Django, Kubernetes, DataDog, ElasticSearch
         }
         \item{
-            Improved the security for business profiles by developing an \textit{ad-hoc Biometric and PIN Authentication system}.
+            Improved the security for \textbf{business profiles}
+            by developing an \textit{ad-hoc Biometric and PIN Authentication system}.
         }
         \item{
-            Developed several features to improve the \textit{Discovery and Promotion} of business profiles,
-            such as adding support for photo galleries and showcasing business profiles in the feed.
+            Developed several features to improve the \textit{Discovery and Promotion}
+            of business profiles, such as adding support for photo galleries
+            and showcasing business profiles in the feed.
         }
         \item{
-            Participated in the effort to ensure the app was \textit{a11y} compliant
+            Participated in the effort to ensure the app was \textbf{a11y} compliant
             by conducting bug searches, analysis and resolution.
         }
         \item{
-            Introduced charity profiles to the app by adding support
+            Introduced \textbf{charity profiles} to the app by adding support
             for \textit{Search and Discovery} and \textit{Donations}.
         }
         \item{
@@ -143,77 +149,26 @@
     %---------------------------------------------------------------------------
 
     \makesectionitemheader
-        {IncluIT / SimTLIX}                             {Jun. 2019 - Sept. 2020}
-        {Semi Senior Software Engineer}                                {Córdoba, Argentina}
+        {IncluIT / SimTLIX}                    {Jun. 2019 - Sept. 2020}
+        {Semi Senior Software Engineer}        {Córdoba, Argentina}
 
         \begin{sectionitemlist}
-
-        % Pulse Secure
-        \item{\textit{Pulse Secure} (VPN application)}
-            \begin{sectionitemlist}
-            \item{
-                Migrated Firewall from \textbf{Kernel Extensions} to the
-                \textbf{Network Extension framework} to support \textit{macOS Big Sur}
-                using \textbf{Objective C} and \textbf{C++}.
-            }
-            \item{
-                Taught Objective C classes to guide colleagues new to the language.
-            }
-            \item{
-                Raised project code coverage to 85\% by writing and configuring unit tests.
-            }
-            \end{sectionitemlist}
-
-        % Avaya
-        \item{\textit{Avaya Workspace} (telecommunications application)}
-            \begin{sectionitemlist}
-            \item{
-                Developed real-time background blur PoC for video conferences using
-                \textbf{Keras} with \textbf{Python} and \textbf{TensorFlow Lite}
-                with \textbf{Objective C} and \textbf{C++} for iOS and macOS.
-            }
-            \item{
-                Worked on improvement and bug-fixing for the \textbf{macOS}
-                and \textbf{iOS} apps using \textbf{Objective C}.
-            }
-            \end{sectionitemlist}
-
-        % Jerárquicos
-        \item{\textit{Jerárquicos} (health insurance company)}
-            \begin{sectionitemlist}
-            \item{
-                Scored the highest customer compliance rate
-                in 5 years at the annual performance review.
-            }
-            \item{
-                Eased the user experience by integrating the use of
-                QR readers into the iOS app using \textbf{Swift}.
-            }
-            \item{
-                Refactored several existing flows in the application
-                to follow a proper \textbf{separation of concerns}.
-            }
-            \item {
-                Increased user interaction by developing a flow to make pharmacy
-                related purchases within the app using \textbf{Swift}.
-            }
-            \end{sectionitemlist}
-
-        % Telecom
-        \item{\textit{Telecom - Personal} (telecommunications company)}
-            \begin{sectionitemlist}
-            \item{
-                Automated the internal dependencies integration system
-                (previously a manual process) by refactoring internal dependencies
-                from \textbf{static} to \textbf{dynamic} frameworks to use \textbf{Carthage}.
-            }
-            \item{
-                Personalized the user experience by improving the authentication
-                library to launch different experiences on login using
-                \textbf{Swift} with the \textbf{WebKit} framework.
-            }
-            \end{sectionitemlist}
-
+        \item{
+            \textbf{Technologies:} Swift \& Objective-C (iOS \& macOS), C++,
+            Python, Keras, TensorFlow Lite.
+        }
+        \item{
+            Migrated Firewall from \textit{Kernel Extensions} to \textit{Network Extension framework}
+            for VPN application \textbf{Pulse Secure}.
+        }
+        \item{
+            Developed a real-time background blur PoC for the video
+            conference application \textbf{Avaya Workspace}.
+        }
+        \item{
+            Re-wrote the authentication library for the \textbf{Personal}
+            (telecommunications company) app.
+        }
         \end{sectionitemlist}
 
     %---------------------------------------------------------------------------
@@ -221,8 +176,8 @@
     %---------------------------------------------------------------------------
 
     \makesectionitemheader
-        {Globant - Royal Caribbean}                         {Feb. 2019 - Jun. 2019}
-        {iOS Engineer}                                         {Córdoba, Argentina}
+        {Globant - Royal Caribbean}            {Feb. 2019 - Jun. 2019}
+        {iOS Engineer}                         {Córdoba, Argentina}
 
         \begin{sectionitemlist}
         \item{Improved code coverage by adding \textbf{unit tests} using \textbf{Swift}.}
@@ -234,35 +189,22 @@
     %---------------------------------------------------------------------------
 
     \makesectionitemheader
-        {JCOR}                                              {Jun. 2018 - Feb. 2019}
-        {Full Stack Developer}                                 {Córdoba, Argentina}
+        {JCOR}                               {Jun. 2018 - Feb. 2019}
+        {Full Stack Developer}               {Córdoba, Argentina}
 
         \begin{sectionitemlist}
-
-        % Taaxii
-        \item{\textit{Taaxii} (transportation company)}
-            \begin{sectionitemlist}
-            \item{
-                Developed car-pooling flows and refactored login and register
-                modules using \textbf{Swift} for iOS, \textbf{Java} for Android,
-                \textbf{Java} with \textbf{Spring} for the back-end and \textbf{MySQL}.
-            }
-            \item{
-                Improved regressions by automating test cases
-                using \textbf{Selenium} and \textbf{Appium}.j
-            }
-            \end{sectionitemlist}
-
-        % Abogados
-        \item{\textit{Abogados} (management software)}
-            \begin{sectionitemlist}
-            \item{
-                Developed an activity tracker using
-                \textbf{Groovy on Rails}, \textbf{JavaScript + JQuery}
-                and \textbf{PostgreSQL} database.
-            }
-            \end{sectionitemlist}
-
+        \item{
+            \textbf{Technologies:} Java Spring (back-end), Swift (iOS), Java (Android)
+            Groovy on Rails, Javascript, MySQL, PostgreSQL.
+        }
+        \item{
+            Developed car-pooling flows and refactored login and register for the
+            \textbf{Taaxii} transportation company.
+        }
+        \item{
+            Improved stability by automating test cases using
+            \textbf{Selenium} and \textbf{Appium}.
+        }
         \end{sectionitemlist}
 
 \end{cvsection}
